--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 <h1>Privacy Policy - Mignon</h1>
 <p>Mignon does not collect or retain any information. For inquires contact info@nerx.tech</p>
-<img src="Icon.JPEG">
+<img src="Icon.jpeg">
 
 
 <html>
